--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
         <footer class="footer section">
             <div class="footer__container bd-grid">
                 <div class="footer__data">
-                    <h2 class="footer__title">Takshya Raj</h2>
-                    <p class="footer__text">I'm Takshya Raj and this is my personal website</p>
+                    <h2 class="footer__title"> jinx</h2>
+                    <p class="footer__text"> iamjinx and this is my personal website</p>
                 </div>
 
                 <div class="footer__data">
